--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                        <img src="assets/img/pexel_img_003.jpg" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
@@ -141,22 +141,22 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="assets/img/pexel_img_001.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="assets/img/pexel_img_002.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <img src="assets/img/pexel_img_003.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <img src="assets/img/pexel_img_004.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
+                        <img src="assets/img/pexel_img_005.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="assets/img/pexel_img_006.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -170,7 +170,7 @@
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Enviar" class="contact__button button">
+                        <input type="button" value="Me Contacter" class="contact__button button">
                     </form>
                 </div>
             </section>
