--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="assets/img/perfil.png" alt="">
+                    <img src="assets/img/pat_selfie_loum.png" alt="">
                 </div>
             </section>
 
@@ -61,7 +61,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/about.jpg" alt="">
+                        <img src="assets/img/pat_selfie_loum.png" alt="">
                     </div>
                     
                     <div>
